<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">INNOVATE 2014</string>
    <string name="action_settings">Settings</string>
    <string name="feedback">FEEDBACK</string>
    <string name="action_search">search</string>
    <string name="action_settings">settings</string>
    <string name="session_rating_label">session_rating_label</string>
    <string name="sponsors">Sponsers</string>
    <string name="keynote">2014 Conference Keynotes</string>
    <string name="energy">Energy – Lighting Up Africa</string>
    <string name="healthcare">Healthcare Innovations</string>
    <string name="healthcare_panel_description">Technology Innovation to Improve Healthcare in Africa: HOPE or HYPE?\n
        
In Sub-Saharan Africa, there are only 2.5 health workers for every 1000 people. 
To compound on this issue, Sub-Saharan Africa is dealing with roughly 25% of the world’s disease cases. 
In this panel discussion we will be looking at how recent technology innovations have changed the healthcare landscape in Africa.  
Are these technological innovations leading us in the right direction to solve many of the challenges that the 
African healthcare system is facing?  Or are these technological innovations mere distractions to the true solutions that are required?  
What is the next big idea required from entrepreneurs in Africa?</string>
    <string name="investments">Investment in Africa</string>
    <string name="technology">Technology Disrupting Africa</string>
    <string name="venture">Venture Incubation</string>
    <string name="women">Women in Africa</string>
    <string name="title_activity_speakers">SpeakersActivity</string>
    <string name="thakkar">Ashish Thakkar is the Founder and Managing Director of the Mara Group of companies. In 15 years, he has taken the Group from the humble beginnings of selling computers to friends, to the global firm that exists today in 18 African countries, employing over 4,500 people. Thakkar is passionate about the growth and development of Africa and focuses most of his energy on commercial and philanthropic initiatives across the continent. In 2010, the Mara Group was identified by the World Economic Forum as a dynamic high-growth company with the potential to be a driving force for economic and social change. Thakkar has been appointed on the advisory panels to several heads of state in sub-Saharan Africa and is also a team member of the Commonwealth Business Council and COMESA. He will be representing East Africa on Virgin Galactic\'s first mission into space, making him Africa\'s second astronaut.</string>

     <!-- Feedback -->
    <string name="session_feedback_submitlink">Submit Feedback</string>
    <string name="session_rating_label">Rate this session overall:</string>

    <string name="session_feedback_relevance">
        How relevant was this session to your background?
    </string>

    <string name="session_feedback_notgreat">Not so awesome</string>
    <string name="session_feedback_great">Awesome</string>

    <string name="session_feedback_notrel">Not relevant</string>
    <string name="session_feedback_rel">Relevant</string>

    <string name="session_feedback_content">The content was:</string>
    <string name="session_feedback_basic">Too basic</string>
    <string name="session_feedback_advanced">Too advanced</string>

    <string name="session_feedback_speaker_quality">Speaker quality:</string>
    <string name="session_feedback_poor">Poor</string>
    <string name="session_feedback_outstanding">Outstanding</string>
    <string name="session_feedback_tell_us">Tell us!</string>
    <string name="session_feedback_6months">
        Will you use the information from this panel in the next 6 months?
    </string>
    <string name="session_feedback_probably">Probably</string>
    <string name="session_feedback_probnot">Probably not</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="session_feedback_other">Anything else we should know?</string>
</resources>
